--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,10 @@
         <title>4099 Driver Station</title>
 
         <!-- Bootstrap core CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" >
 
         <!-- Material Design fonts -->
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/roboto.css') }}" type="text/css">
 
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <link href="{{ url_for('static', filename='css/ie10-viewport-bug-workaround.css') }}" rel="stylesheet">
@@ -32,16 +31,14 @@
         <!-- Color picker -->
         <link href="{{ url_for('static', filename='css/jquery.minicolors.css') }}" rel="stylesheet">
 
-
         <!-- CSS specific to this website -->
         <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+            <script src="{{ url_for('static', filename='js/html5shiv.min.js') }}"></script>
+            <script src="{{ url_for('static', filename='js/respond.min.js') }}"></script>
         <![endif]-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+        <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
         <script>
             var $SCRIPT_ROOT = {{ request.script_root | tojson | safe }};
         </script>
