--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="navbar-collapse collapse" id="navbar-main">
                         <ul class="nav navbar-nav navbar-right">
-                            <li></li>
+                            <li><a href="/restart" class="navbar-brand" target="_blank">Restart</a></li>
                         </ul>
                     </div>
                 </div>
