--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="navbar-collapse collapse" id="navbar-main">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="/restart" class="navbar-brand" target="_blank">Restart</a></li>
+                            <li><a href="javascript:restartService()" class="navbar-brand" target="_blank">Restart</a></li>
                         </ul>
                     </div>
                 </div>
@@ -65,47 +65,6 @@
             <div class="jumbotron">
                 <img src="/video_feed" width="100%"/>
             </div>
-{#            <div class="alert alert-danger" id="invalidUUIDAlert" style="display: none">#}
-{#                <strong>Oh snap!</strong>#}
-{#                This UUID was not found.#}
-{#            </div>#}
-            <!-- Track New Package -->
-{#            <div class="form-group well">#}
-{#                <form id="newPackageTrackerForm" onsubmit="addPackageFromTextInput()">#}
-{#                    <label id="newPackageLabel" for="newPackageTrackerForm">Enter package UUID:</label>#}
-{#                    <input type-"text" class="form-control" id="newPackage" name="newPackage">#}
-{#                    <a href="javascript:addPackageFromTextInput()" class="btn btn-raised btn-primary">Add</a>#}
-{#                </form>#}
-{#            </div>#}
-{#            <div class="text-center">#}
-{#                <div id="selectButtons" class="btn-group btn-group-raised text-center">#}
-{#                    <a href="javascript:selectAll()" class="btn btn-info">View All</a>#}
-{#                    <a href="javascript:selectNone()" class="btn btn-info">View None</a>#}
-{#                    <a href="javascript:selectUndelivered()" class="btn btn-info">View Undelivered</a>#}
-{#                    <a href="javascript:selectDelivered()" class="btn btn-info">View Delivered</a>#}
-{#                </div>#}
-{#            </div>#}
-{#            <!-- Package List -->#}
-{#            <div class="form-group table-responsive">#}
-{#                <form id="packageTableForm">#}
-{#                    <table class="table table-striped table-hover" id="packageTable">#}
-{#                        <thead>#}
-{#                            <tr>#}
-{#                                <th></th>#}
-{#                                <th>Display</th>#}
-{#                                <th>UUID</th>#}
-{#                                <th>Name</th>#}
-{#                                <th>Location</th>#}
-{#                                <th>ETA</th>#}
-{#                                <!--<th><a style="visibility: hidden;" class="btn btn-raised btn-danger">Stop Tracking</a>#}
-{#                                </th>-->#}
-{#                            </tr>#}
-{#                        </thead>#}
-{#                        <tbody id="listBody">#}
-{#                        </tbody>#}
-{#                    </table>#}
-{#                </form>#}
-{#            </div>#}
           
             <footer class="footer">
                 <p>&copy; 2017 Falcons FIRST 4099.</p>
@@ -119,5 +78,6 @@
             $.material.init();
         </script>
         <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
  </html>
